examples/neg/namer/types/function-in-record.effekt
record Comparison(compare: (Int, Int) => Bool)
